2008-10-29
	* src/password.c (pam_sm_chauthtok): if the "use_shmem" option is
	set, stash the credentials which we obtain after a password change
	in shared memory as well.  Based on patch from and initial report
	by Michael Calmer.

2008-10-16
	* src/acct.c,src/auth.c,src/password.c,src/session.c,src/sly.c: be
	resistant to libpam returning NULL from pam_get_user() even though it
	results a successful result code (#467208).

2008-10-01
	* src/perms.c,src/perms.h: add functions for swapping real and
	effective UID and GID, if they're different
	* src/v5.c: swap the real and effective UID and GID when reading
	credentials from an "existing_ticket" ccache

2008-09-03
	* configure.ac,src/Makefile.am: link pam_krb5.so with libpam unless
	explicitly disabled at compile-time (#227097,#460998)

2008-09-03
	* src/options.c (option_b): if the realm name given to us is NULL,
	don't bother consulting the appdefaults
	* src/options.c (_pam_krb5_options_init): check for the "debug" flag
	earlier (Simo Sorce)

2008-08-08
	* src/Makefile.am: reverse the order of libpam_krb5.la and PAM_LIBS
	so that people adding things like -Wl,--as-needed -Wl,--no-undefined
	will be able to (patch from Guillaume Rousse)

2008-04-10
	* po/Makevars: extract text strings correctly (#441858).
	* po/POTFILES.in: note that input strings are planned to be UTF-8
	(#441858).

2008-04-09
	* src/session.c(pam_sm_open_session): when setting up creds to use
	for obtaining tokens, don't bother trying to save v4 creds if we
	don't have any.

2008-03-26
	* src/auth.c(pam_sm_authenticate): unconditionally set PAM_AUTHTOK
	when we prompt the user for a password (#437179)

2008-03-20
	* configure.ac,src/auth.c,src/password.c: use Y_ as a macro
	for dgettext rather than _, because <openssl/des_old.h> will
	undefine _, and we end up including it indirectly when building with
	Heimdal with v4 compatibility enabled.

2008-03-18
	* src/afs5log.c(main): actually hook up the '-n' flag to the